# it176131.github.io

./: .gitignore  README.md  _config.yml  about.md  index.md  ipynb_to_post.py  resume.md
_includes/: analytics.html  comments.html  head.html
_layouts/: base.html  post.html
_posts/: 2023-12-04-hello-world.md  2023-12-06-accident.md  2023-12-08-accident.md  2024-01-01-new-year.md  2024-01-03-more-pics-please.md  2024-01-10-comments.md  2024-01-19-classification-report.md  2024-01-21-classification-report.md  2024-02-06-sklearn-pipeline.html  2024-02-17-sklearn-pipeline-pt2.html  2024-03-09-stack-overflow-api.html  2024-03-10-contributing.html  2024-03-11-contributing.html  2024-03-12-ipynb-to-post.md  2024-03-23-contributing.html  2024-03-24-contributing-pt2.md  2024-05-07-basket-analysis-pt1.html  2024-07-10-til-typer.md  2024-07-27-til-tree.md  2024-07-28-til-tree.md  2024-08-04-multi-source-bfs.html  2024-08-12-spacy-listening-components.html  2024-11-27-spacy-extensions.html  2024-11-29-dynamic-enums.md  2024-12-03-pycharm-projects-envs.md  2024-12-12-isort.md  2024-12-18-action-workflow.md  2024-12-19-action-workflow.md  2024-12-19-pydantic-xml.md  2024-12-22-pydantic-xml.md  2024-12-23-pydantic-xml.md  2025-01-10-recent-posts-action.md  2025-01-18-recent-posts-action.md  2025-01-20-recent-posts-action.md  2025-01-25-recent-posts-action.md  2025-01-26-year-in-review.md  2025-01-31-year-in-review.md  2025-02-16-includes-layouts.md  2025-02-28-includes-layouts.md  (+6 more)
tree/: README.md  main.py  pyproject.toml
tree/src/scripts/: __main__.py  main.py
(+35 files in other folders)
