[build-system]
requires = ["setuptools >= 71.1.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "pytree"
dependencies = [
    "rich>=13.7.1",
    "typer>=0.12.3",
]
requires-python = ">= 3.11"
authors = [
    {name = "Ian Thompson"},
]
maintainers = [
    {name = "Ian Thompson"},
]
description = "A `rich.Tree` executable."
readme = "README.md"
keywords = ["directory", "tree", "structure", "layout"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Readers of it176131.github.io",
    "Topic :: Data Analysis :: Tools",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
pytree = "scripts.main:app"